--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Created by .ignore support plugin (hsz.mobi)
+### Force ignore Intellij IDEA project files
+.idea
+*.iml
+
 ### Vim template
 # Swap
 [._]*.s[a-v][a-z]
