--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'org.controlsfx:controlsfx:8.40.14'
+    compile 'org.jmdns:jmdns:3.5.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
