--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile 'org.controlsfx:controlsfx:8.40.14'
     compile 'org.jmdns:jmdns:3.5.3'
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    compile group: 'org.hildan.fxgson', name: 'fx-gson', version: '3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
